Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18836

lctl SIGSEGV in parser.c

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      0x0000fffff7f86438 in execute_line (line=0x6a92c0 "======") at util/parser.c:301
      301            for (i = 0; cmd->pc_sub_cmd[i].pc_name; i++)
      #0  0x0000fffff7f86438 in execute_line (line=0x6a92c0 "======") at util/parser.c:301
      #1  0x0000fffff7f86f1c in Parser_commands () at util/parser.c:419
      #2  0x0000000000404af0 in lctl_main (argv=0xffffffffe8b8, argc=1) at lctl.c:669
      #3  main (argc=1, argv=0xffffffffe8b8) at lctl.c:694

      Attachments

        Activity

          People

            fsehr Frank Sehr (Inactive)
            fsehr Frank Sehr (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: